--- a/home.html
+++ b/home.html
@@ -11,14 +11,21 @@
 <body>
     <header>
         <div class="container-fluid">
-            <div class="row">
+            <div class="row imasha">
                 <p class="col-12">10% discount on first purchase</p>
             </div>
             <div class="row">
-                <div class="col-4">
-                    <img src="./images/icons/endlesslogo.png" height="40px">
+                <div class="col-2 logo">
+                    <img src="./images/icons/endlesslogo.png" height="38px">
+                </div>
+                <div class="col-8 searchBar">
+                    <form class="col-8" role="search">
+                      <input class="form-control me-2" type="search" placeholder="Discover your interests" aria-label="Search">
+                      <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+                    </form>
                 </div>
             </div>
+            <hr/>
         </div>
     </header>
 
